<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OnTheStreet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_place">Add place</string>
    <string name="label_item_description">Description</string>
    <string name="label_item_name">Name</string>
    <string name="label_item_location">Location</string>
    <string name="title_activity_place_create">Add place</string>
    <string name="title_activity_place_detail">Place details</string>
    <string name="action_item_accept">Accept</string>
    <string name="action_item_cancel">Cancel</string>
    <string name="add_contact">Add contact</string>
    <string name="action_new_picture">New picture</string>
    <string name="action_student_edit">Edit place</string>
    <string name="action_student_delete">Delete place</string>
	<string name="action_share">Share place</string>
	<string name="msg_error_server">Location server unavailable</string>	
	<string name="get_location">Get location</string>	
	<string name="msg_error_no_connection">No Internet connection is available</string>
	<string name="label_name">Name</string>
	<string name="label_description">Description</string>
	<string name="label_latitude">Latitude</string>
	<string name="label_longitude">Longitude</string>
	<string name="title_activity_my_settings">Settings</string>
	<string name="label_notifications">Activate notifications</string>
	<string name="label_accurate_location">Activate accurate location</string>
	<string name="pref_description_place_limit">50 places per app</string>
	<string name="pref_title_place_limit">Saved place\'s limit</string>
	<string name="action_item_save">Save</string>
	<string name="save_changes">Save changes</string>
	<string name="search_title">Search place</string>
	<string name="search_hint">Enter the place\'s name</string>
	<string name="action_contact_delete">Delete contact</string>
</resources>