<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="User data">
        <EditTextPreference android:summary="Enter your email" android:title="Email" android:key="pref_useremail"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_activity_my_settings">
                <ListPreference 
            android:key="pref_key_place_limit"
            android:summary="@string/pref_description_place_limit"
            android:title="@string/pref_title_place_limit"
            android:entries="@array/stringArray"
            android:entryValues="@array/integerArray" 
            android:defaultValue="100"/>
        <SwitchPreference android:title="@string/label_notifications" android:key="pref_notifacation" android:switchTextOn="Yes" android:switchTextOff="No"/>
        <SwitchPreference android:title="@string/label_accurate_location" android:key="pref_fulltime" android:switchTextOn="Yes" android:switchTextOff="No"/>
    </PreferenceCategory>
    

</PreferenceScreen>
