<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.deusto.onthestreet.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/mnu_add_place"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/add_place">
    </item>
    <item
        android:id="@+id/action_get_location"
        android:icon="@drawable/ic_action_place"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/get_location">
    </item>
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="2"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search_title"/>

</menu>